[gd_scene load_steps=5 format=3 uid="uid://bkali6kjfiph7"]

[ext_resource type="PackedScene" uid="uid://dxpa3dfmisn60" path="res://mazes/abstract_maze.tscn" id="1_1gr8n"]
[ext_resource type="PackedScene" uid="uid://k5gxkym35va1" path="res://PlayerCharacters/UFO/player_UFO.tscn" id="2_4pbyi"]
[ext_resource type="Script" uid="uid://d01omu425eni2" path="res://mazes/basic_maze.gd" id="2_1711j"]
[ext_resource type="PackedScene" uid="uid://dvvlkh0exrklm" path="res://Backdrop/backdrop.tscn" id="2_taj8d"]

[node name="BasicMaze" type="Node2D"]
script = ExtResource("2_1711j")

[node name="Container" type="Container" parent="."]

[node name="Backdrop" parent="Container" instance=ExtResource("2_taj8d")]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="AbstractMaze" parent="." instance=ExtResource("1_1gr8n")]

[node name="ObstacleParent" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_4pbyi")]
position = Vector2(-20, -20)

[connection signal="asserted" from="Player" to="." method="_on_player_asserted"]
[connection signal="nudged" from="Player" to="." method="_on_player_nudged"]
